FINALLY SHADER WORKS, also i added some cool stuff

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -98,6 +98,9 @@
   "item.runology.dimensionalthreatmusicdisc": "Music Disc",
   "item.runology.dimensionalthreatmusicdisc.desc": "DavidRarria09 - Dimensional Threat",
   "item.runology.enhancedbonemeal": "Enhanced Bone Meal",
+  "item.runology.echogoggles": "Echo Goggles",
+  "item.runology.dragoniumingot": "Dragonium Ingot",
+  "item.runology.ancientdragonsblade": "Ancient Dragon's Blade",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
   "runology.analyzetasks.runology.getitem": "Collect Items",
