--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -131,7 +131,7 @@
   "book.runology.runologyguide.basics.runicworkbench.name": "Runic Workbench",
   "book.runology.runologyguide.basics.runicworkbench.page1.title": "Runic Workbench",
   "book.runology.runologyguide.basics.runicworkbench.page1.title2": "Copper Gauntlet",
-  "book.runology.runologyguide.basics.runicworkbench.page2.text": "Some things need runic energy for me to create, The runic workbench will allow me to add runic energy to recipes that it will get by consuming runes, It can hold 1000 of each type of runic energy",
+  "book.runology.runologyguide.basics.runicworkbench.page2.text": "Some things need runic energy for me to create, The runic workbench will allow me to add runic energy to recipes that it will get by consuming runes, It can hold 1000 of each type of runic energy, however I feel like it doesn't come without a problem to deal with...",
   "book.runology.runologyguide.basics.runicanalyzer.name": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.title": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.text": "While these first few things have been easy to figure out, for some other stuff, I will need to use the Runic Analyzer to figure out how to make",
@@ -205,6 +205,17 @@
   "book.runology.runologyguide.runicmysteries.instability.name": "Instability",
   "book.runology.runologyguide.runicmysteries.instability.page1.title": "Instability",
   "book.runology.runologyguide.runicmysteries.instability.page1.text": "It seems that there is a mysterious force i have named \"Instability\", The more instability there is, The worse and faster instability events happen",
+  "book.runology.runologyguide.ancientdiscovery.echogoggles.name": "Echo Goggles",
+  "book.runology.runologyguide.ancientdiscovery.echogoggles.page1.title": "Echo Goggles",
+  "book.runology.runologyguide.ancientdiscovery.echogoggles.page1.text": "It seems that echo shards emit constant echolocation without upsetting the warden, if I were to make it thinner, I could see in the dark by looking through it",
+  "book.runology.runologyguide.ancientdiscovery.lanternofflames.name": "Lantern of Flames",
+  "book.runology.runologyguide.ancientdiscovery.lanternofflames.page1.title": "Lantern of Flames",
+  "book.runology.runologyguide.ancientdiscovery.lanternofflames.page1.text": "The ancients once used this lantern to steal flames for their own use, Their design would steal the entire flame, however I can upgrade their design to steal the heat instead of the flame",
+  "book.runology.runologyguide.ancientdiscovery.lanternofflames.page2.text": "To use this I must throw it into a form of fire and let it absorb the heat, then I can release that heat over time in the form of a flame, setting everything around me on fire",
+  "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.name": "Ancient Dragon's Blade",
+  "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page1.title": "Ancient Dragon's Blade",
+  "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page1.title2": "Dragonium Ingot",
+  "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page2.text": "I can't copy the original design, it was originally made out of the scales of a long dead species of dragon, however I can make a metal using dragons breath and copper which will work, By using this weapon I can create dragon breath to kill my enemies, however it will need to recharge after I finish using it",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
