--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -101,6 +101,10 @@
   "item.runology.echogoggles": "Echo Goggles",
   "item.runology.dragoniumingot": "Dragonium Ingot",
   "item.runology.ancientdragonsblade": "Ancient Dragon's Blade",
+  "item.runology.lanternofflames": "Lantern of Flames",
+  "item.runology.ancientdragonsbladetornresearch": "Ancient Dragon's Blade Torn Research",
+  "item.runology.echogogglestornresearch": "Echo Goggles Torn Research",
+  "item.runology.lanternofflamestornresearch": "Lantern of Flames Torn Research",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
   "runology.analyzetasks.runology.getitem": "Collect Items",
@@ -216,6 +220,30 @@
   "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page1.title": "Ancient Dragon's Blade",
   "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page1.title2": "Dragonium Ingot",
   "book.runology.runologyguide.ancientdiscovery.ancientdragonsblade.page2.text": "I can't copy the original design, it was originally made out of the scales of a long dead species of dragon, however I can make a metal using dragons breath and copper which will work, By using this weapon I can create dragon breath to kill my enemies, however it will need to recharge after I finish using it",
+  "book.runology.runologyguide.spellcasting.amethyststaff.name": "Amethyst Staff",
+  "book.runology.runologyguide.spellcasting.amethyststaff.page1.title": "Amethyst Staff",
+  "book.runology.runologyguide.spellcasting.amethyststaff.page1.text": "Unlike gauntlets, staffs can cast ranged spells but are unable to cast melee spells, Amethyst will work for a staff core but this is only a Tier 1 Staff",
+  "book.runology.runologyguide.spellcasting.coppergauntlet.name": "Copper Gauntlet",
+  "book.runology.runologyguide.spellcasting.coppergauntlet.page1.title": "Copper Gauntlet",
+  "book.runology.runologyguide.spellcasting.coppergauntlet.page1.text": "Unlike staffs, gauntlets can cast melee spells but are unable to cast ranged spells, Copper will work for a gauntlet material but this is only a Tier 1 Gauntlet",
+  "book.runology.runologyguide.spellcasting.fireballspellcrystal.name": "Fireball Spell Crystal",
+  "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.title": "Fireball Spell Crystal",
+  "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.text": "With blaze powder and blaze rods I can create a spell crystal to be cast using a wand which will fire a simple fireball, this is a Tier 1 Spell",
+  "book.runology.runologyguide.spellcasting.iceshardspellcrystal.name": "Ice Shards Spell Crystal",
+  "book.runology.runologyguide.spellcasting.iceshardspellcrystal.page1.title": "Ice Shards Spell Crystal",
+  "book.runology.runologyguide.spellcasting.iceshardspellcrystal.page1.text": "Using Ice and Packed Ice, this spell will shoot out 15 ice shards which deal low damage, this is a Tier 1 Spell",
+  "book.runology.runologyguide.spellcasting.mysteriumgauntlet.name": "Mysterium Gauntlet",
+  "book.runology.runologyguide.spellcasting.mysteriumgauntlet.page1.title": "Mysterium Gauntlet",
+  "book.runology.runologyguide.spellcasting.mysteriumgauntlet.page1.text": "Using Mysterium instead of Copper, and even the same structure, I can create a Tier 2 Gauntlet, however this has another interesting use",
+  "book.runology.runologyguide.spellcasting.shattercrystalstaff.name": "Shattercrystal Staff",
+  "book.runology.runologyguide.spellcasting.shattercrystalstaff.page1.title": "Shattercrystal Staff",
+  "book.runology.runologyguide.spellcasting.shattercrystalstaff.page1.text": "Using Mysterium instead of Copper and Shattercrystal instead of Amethyst, I can create a Tier 2 Staff",
+  "book.runology.runologyguide.spellcasting.spelltable.name": "Spell Table",
+  "book.runology.runologyguide.spellcasting.spelltable.page1.title": "Spell Table",
+  "book.runology.runologyguide.spellcasting.spelltable.page1.text": "The Spell Table will allow me to charge my gauntlets and staffs as well as adding upgrades to them",
+  "book.runology.runologyguide.spellcasting.summontotemspellcrystal.name": "Summon Totem Spell Crystal",
+  "book.runology.runologyguide.spellcasting.summontotemspellcrystal.page1.title": "Summon Totem Spell Crystal",
+  "book.runology.runologyguide.spellcasting.summontotemspellcrystal.page1.text": "Using Mysterium Ingots and Raw Mysterium, I can create a spell that will create a totem which will grant resistance to all players nearby, this is a Tier 2 Spell",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
