--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -60,8 +60,10 @@
   "block.runology.runicanalyzer": "Runic Analyzer",
   "item.runology.research": "Research",
   "item.runology.research.complete": "Complete",
+  "item.runology.research.use": "You unlocked %1$s",
+  "item.runology.research.alreadyhave": "You already have %1$s unlocked!",
   "item.runology.research.previousentryneeded": "You have not unlocked the previous entries!",
-  "item.runology.research.advancementneeded": "You do not have the required advancement!",
+  "item.runology.research.conditionsnotcompleted": "You do not have the required conditions completed!",
   "entity.runology.runicoverseer": "Runic Overseer",
   "entity.runology.runicoverseer.dialogue1": "<Runic Overseer> So... You came to me looking to leave this realm.",
   "entity.runology.runicoverseer.dialogue2": "<Runic Overseer> I'm afraid I can't let you leave...",
@@ -105,6 +107,12 @@
   "item.runology.ancientdragonsbladetornresearch": "Ancient Dragon's Blade Torn Research",
   "item.runology.echogogglestornresearch": "Echo Goggles Torn Research",
   "item.runology.lanternofflamestornresearch": "Lantern of Flames Torn Research",
+  "item.runology.spellcrystal.gauntletspell": "Gauntlet Spell",
+  "item.runology.spellcrystal.staffspell": "Staff Spell",
+  "item.runology.spellcrystal.unknownspelltype": "Unknown Spell Type",
+  "item.runology.spellcrystal.tier": "Tier %1$s",
+  "item.runology.gauntlet.tier": "Tier %1$s",
+  "item.runology.staff.tier": "Tier %1$s",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
   "runology.analyzetasks.runology.getitem": "Collect Items",
@@ -124,6 +132,9 @@
   "rune.runology.instability": "Instability",
   "rune.runology.purity": "Purity",
 
+  "book.runology.runologyguide.discover1": "This powder seems to be infused with one of the 4 elements, maybe I can find more types?",
+  "book.runology.runologyguide.discover2": "This powder seems to react to powder infused with other elements, maybe combining all 4 types with a book will result in something useful?",
+
   "book.runology.runologyguide.name": "Runic Codex",
   "book.runology.runologyguide.basics.name": "Basics",
   "book.runology.runologyguide.artifice.name": "Artifice",
@@ -139,6 +150,7 @@
   "book.runology.runologyguide.basics.runicanalyzer.name": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.title": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.text": "While these first few things have been easy to figure out, for some other stuff, I will need to use the Runic Analyzer to figure out how to make",
+  "book.runology.runologyguide.basics.runicanalyzer.page2.text": "To use this, I must put my research into it then complete all the tasks it gives me, once I finish all the tasks I must read the research to fully understand it",
   "book.runology.runologyguide.basics.baserunes.name": "Base Runes",
   "book.runology.runologyguide.basics.baserunes.page1.title": "Blank Rune",
   "book.runology.runologyguide.basics.baserunes.page1.title2": "Fire Rune",
@@ -241,6 +253,7 @@
   "book.runology.runologyguide.spellcasting.spelltable.name": "Spell Table",
   "book.runology.runologyguide.spellcasting.spelltable.page1.title": "Spell Table",
   "book.runology.runologyguide.spellcasting.spelltable.page1.text": "The Spell Table will allow me to charge my gauntlets and staffs as well as adding upgrades to them",
+  "book.runology.runologyguide.spellcasting.spelltable.page2.text": "To use a spell I must have the required runic energy in my staff or gauntlet and the correct spell crystal in my offhand",
   "book.runology.runologyguide.spellcasting.summontotemspellcrystal.name": "Summon Totem Spell Crystal",
   "book.runology.runologyguide.spellcasting.summontotemspellcrystal.page1.title": "Summon Totem Spell Crystal",
   "book.runology.runologyguide.spellcasting.summontotemspellcrystal.page1.text": "Using Mysterium Ingots and Raw Mysterium, I can create a spell that will create a totem which will grant resistance to all players nearby, this is a Tier 2 Spell",
