--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -97,6 +97,7 @@
   "item.runology.purifiedflesh": "Purified Flesh",
   "block.runology.spelltable": "Spell Table",
   "block.runology.mysteriousaltar": "Mysterious Altar",
+  "block.runology.mysteriousaltar.seemsneedtotem": "It seems like the perfect spot to fit some sort of totem, I should search around more",
   "item.runology.dimensionalthreatmusicdisc": "Music Disc",
   "item.runology.dimensionalthreatmusicdisc.desc": "DavidRarria09 - Dimensional Threat",
   "item.runology.enhancedbonemeal": "Enhanced Bone Meal",
@@ -170,11 +171,11 @@
   "book.runology.runologyguide.basics.runetransformations.page2.title": "Void Rune",
   "book.runology.runologyguide.basics.runetransformations.page2.text": "By throwing an Air Rune on the ground in the end, I can transform it into a Void Rune",
   "book.runology.runologyguide.basics.runetransformations.page3.title": "Energy Rune",
-  "book.runology.runologyguide.basics.runetransformations.page3.text": "By striking a Fire Rune with lightning, I can transform it into a Void Rune",
+  "book.runology.runologyguide.basics.runetransformations.page3.text": "By striking a Fire Rune with lightning, I can transform it into a Energy Rune",
   "book.runology.runologyguide.basics.runetransformations.page4.title": "Plant Rune",
-  "book.runology.runologyguide.basics.runetransformations.page4.text": "By throwing an Earth Rune on the ground and waiting for a plant to grow around it, I can transform it into a Void Rune",
+  "book.runology.runologyguide.basics.runetransformations.page4.text": "By throwing an Earth Rune on the ground and waiting for a plant to grow around it, I can transform it into a Plant Rune",
   "book.runology.runologyguide.basics.runetransformations.page5.title": "Ice Rune",
-  "book.runology.runologyguide.basics.runetransformations.page5.text": "By throwing a Water Rune into powdered snow, I can transform it into a Void Rune",
+  "book.runology.runologyguide.basics.runetransformations.page5.text": "By throwing a Water Rune into powdered snow, I can transform it into a Ice Rune",
   "book.runology.runologyguide.purity.purityrune.name": "Purity Rune",
   "book.runology.runologyguide.purity.purityrune.page1.title": "Purity Powder",
   "book.runology.runologyguide.purity.purityrune.page1.title2": "Purity Rune",
