--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -241,7 +241,7 @@
   "book.runology.runologyguide.spellcasting.coppergauntlet.page1.text": "Unlike staffs, gauntlets can cast melee spells but are unable to cast ranged spells, Copper will work for a gauntlet material but this is only a Tier 1 Gauntlet",
   "book.runology.runologyguide.spellcasting.fireballspellcrystal.name": "Fireball Spell Crystal",
   "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.title": "Fireball Spell Crystal",
-  "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.text": "With blaze powder and blaze rods I can create a spell crystal to be cast using a wand which will fire a simple fireball, this is a Tier 1 Spell",
+  "book.runology.runologyguide.spellcasting.fireballspellcrystal.page1.text": "With blaze powder and magma blocks I can create a spell crystal to be cast using a wand which will fire a simple fireball, this is a Tier 1 Spell",
   "book.runology.runologyguide.spellcasting.iceshardspellcrystal.name": "Ice Shards Spell Crystal",
   "book.runology.runologyguide.spellcasting.iceshardspellcrystal.page1.title": "Ice Shards Spell Crystal",
   "book.runology.runologyguide.spellcasting.iceshardspellcrystal.page1.text": "Using Ice and Packed Ice, this spell will shoot out 15 ice shards which deal low damage, this is a Tier 1 Spell",
