--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -147,7 +147,7 @@
   "book.runology.runologyguide.basics.runicworkbench.name": "Runic Workbench",
   "book.runology.runologyguide.basics.runicworkbench.page1.title": "Runic Workbench",
   "book.runology.runologyguide.basics.runicworkbench.page1.title2": "Copper Gauntlet",
-  "book.runology.runologyguide.basics.runicworkbench.page2.text": "Some things need runic energy for me to create, The runic workbench will allow me to add runic energy to recipes that it will get by consuming runes, It can hold 1000 of each type of runic energy, however I feel like it doesn't come without a problem to deal with...",
+  "book.runology.runologyguide.basics.runicworkbench.page2.text": "Some things need runic energy for me to create, The runic workbench will allow me to add runic energy to recipes that it will get by consuming runes, It can hold 1000 of each type of runic energy, however I feel like this form of magic doesn't come without a potentially destructive problem...",
   "book.runology.runologyguide.basics.runicanalyzer.name": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.title": "Runic Analyzer",
   "book.runology.runologyguide.basics.runicanalyzer.page1.text": "While these first few things have been easy to figure out, for some other stuff, I will need to use the Runic Analyzer to figure out how to make",
