--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -117,8 +117,13 @@
   "block.runology.runiccauldron": "Runic Cauldron",
   "block.runology.runiccauldron.owner": "This Runic Cauldron is owned by %1$s",
   "block.runology.endertransporter": "Ender Transporter",
-  "block.runology.endertransporter.insertmode": "Mode is now INSERT",
-  "block.runology.endertransporter.extractmode": "Mode is now EXTRACT",
+  "block.runology.endertransporter.mode": "Mode is now %1$s",
+  "block.runology.endertransporter.type": "Transport Type is now %1$s",
+  "block.runology.endertransporter.modeandtype": "Mode is %1$s and Transport Type is %2$s",
+  "block.runology.endertransporter.item": "ITEM",
+  "block.runology.endertransporter.fluid": "FLUID",
+  "block.runology.endertransporter.extract": "EXTRACT",
+  "block.runology.endertransporter.insert": "INSERT",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
   "runology.analyzetasks.runology.getitem": "Collect Items",
