--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -129,7 +129,9 @@
   "item.runology.liquidsoulsbucket": "Liquid Souls Bucket",
   "item.runology.transmutativesolutionbucket": "Transmutative Solution Bucket",
   "block.runology.liquidsouls": "Liquid Souls",
-  "block.runology.transmutivesolution": "Transmutive Solution",
+  "block.runology.transmutativesolution": "Transmutive Solution",
+  "fluid_type.runology.liquidsouls": "Liquid Souls",
+  "fluid_type.runology.transmutativesolution": "Transmutive Solution",
   "block.runology.spark": "Spark",
 
   "runology.analyzetasks.runology.consumeitem": "Give Items",
@@ -281,6 +283,26 @@
   "book.runology.runologyguide.artifice.endertransporter.name": "Ender Transporter",
   "book.runology.runologyguide.artifice.endertransporter.page1.title": "Ender Transporter",
   "book.runology.runologyguide.artifice.endertransporter.page2.text": "By combining Copper and an Ender Pearl, I can create a device capable of transferring items or liquids, If I need to, I can attune it to a specific color using dye, I can use it to switch its mode and use it while sneaking with an empty hand to change the transport mode",
+  "book.runology.runologyguide.artifice.buddingamethyst.name": "Budding Amethyst",
+  "book.runology.runologyguide.artifice.buddingamethyst.page1.title": "Budding Amethyst",
+  "book.runology.runologyguide.artifice.buddingamethyst.page1.text": "While I can't harvest budding amethyst, I can transmute regular amethyst blocks into budding amethyst allowing me to grow amethyst anywhere I want",
+  "book.runology.runologyguide.artifice.ghasttear.name": "Ghast Tear",
+  "book.runology.runologyguide.artifice.ghasttear.page1.title": "Ghast Tear",
+  "book.runology.runologyguide.artifice.ghasttear.page1.text": "Ghast tears can be annoying to get, luckily I can create ghast tears with liquid souls and a fire charge",
+  "book.runology.runologyguide.artifice.liquidsouls.name": "Liquid Souls",
+  "book.runology.runologyguide.artifice.liquidsouls.page1.title": "Liquid Souls",
+  "book.runology.runologyguide.artifice.liquidsouls.page1.text": "By diffusing soul sand in water, I can create a liquid filled with souls, Weirdly enough, there is no trace of the brown color soul sand has, only the souls seem to be visible",
+  "book.runology.runologyguide.artifice.transmutativesolution.name": "Transmutative Solution",
+  "book.runology.runologyguide.artifice.transmutativesolution.page1.title": "Transmutative Solution",
+  "book.runology.runologyguide.artifice.transmutativesolution.page1.text": "While the brewing stand is unable to make true transmutative solution, the runic cauldron is able to make it easily by diffusing nether wart in water",
+  "book.runology.runologyguide.artifice.heads.name": "Heads",
+  "book.runology.runologyguide.artifice.heads.page1.title": "Zombie Head",
+  "book.runology.runologyguide.artifice.heads.page1.title2": "Skeleton Skull",
+  "book.runology.runologyguide.artifice.heads.page2.title": "Creeper Head",
+  "book.runology.runologyguide.artifice.heads.page2.title2": "Piglin Head",
+  "book.runology.runologyguide.artifice.heads.page3.title": "Dragon Head",
+  "book.runology.runologyguide.artifice.heads.page3.title2": "Wither Skeleton Skull",
+  "book.runology.runologyguide.artifice.heads.page4.text": "Using Liquid Souls, I can create heads and skulls from different mobs, This method should be much easier than the usual methods",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
