--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -315,6 +315,9 @@
   "book.runology.runologyguide.artifice.basictransmutation.page2.title": "Gold Ingot",
   "book.runology.runologyguide.artifice.basictransmutation.page2.title2": "Iron Ingot",
   "book.runology.runologyguide.artifice.basictransmutation.page3.text": "The similarities between some materials allow me to transmutate one material into another, I have managed to figure out how to properly use a few basic connections",
+  "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.name": "Conjure Spark Spell Crystal",
+  "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.page1.title": "Conjure Spark Spell Crystal",
+  "book.runology.runologyguide.spellcasting.conjuresparkspellcrystal.page1.text": "Using glowstone and lightning rods, I can conjure a ball of energy that zaps anything non-human that get close to it, this spark will also give off light",
 
   "book.runology.condition.analyze.ln1": "Click with paper in your inventory to get research",
   "book.runology.condition.analyze.ln2": "Requires Advancement : %1$s"
