--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -12,7 +12,7 @@
   "item.runology.earthrune": "Earth Rune",
   "item.runology.airrune": "Air Rune",
   "item.runology.icerune": "Ice Rune",
-  "item.runology.plantrune": "Plant Rune",
+  "item.runology.plantrune": "Nature Rune",
   "item.runology.voidrune": "Void Rune",
   "item.runology.energyrune": "Energy Rune",
   "creativemodetab.runologyblocks": "Runology Blocks",
@@ -146,7 +146,7 @@
   "rune.runology.air": "Air",
   "rune.runology.water": "Water",
   "rune.runology.ice": "Ice",
-  "rune.runology.plant": "Plant",
+  "rune.runology.plant": "Nature",
   "rune.runology.void": "Void",
   "rune.runology.energy": "Energy",
   "rune.runology.instability": "Instability",
@@ -191,8 +191,8 @@
   "book.runology.runologyguide.basics.runetransformations.page2.text": "By throwing an Air Rune on the ground in the end, I can transform it into a Void Rune",
   "book.runology.runologyguide.basics.runetransformations.page3.title": "Energy Rune",
   "book.runology.runologyguide.basics.runetransformations.page3.text": "By striking a Fire Rune with lightning, I can transform it into a Energy Rune",
-  "book.runology.runologyguide.basics.runetransformations.page4.title": "Plant Rune",
-  "book.runology.runologyguide.basics.runetransformations.page4.text": "By throwing an Earth Rune on the ground and waiting for a plant to grow around it, I can transform it into a Plant Rune",
+  "book.runology.runologyguide.basics.runetransformations.page4.title": "Nature Rune",
+  "book.runology.runologyguide.basics.runetransformations.page4.text": "By throwing an Earth Rune on the ground and waiting for a plant to grow around it, I can transform it into a Nature Rune",
   "book.runology.runologyguide.basics.runetransformations.page5.title": "Ice Rune",
   "book.runology.runologyguide.basics.runetransformations.page5.text": "By throwing a Water Rune into powdered snow, I can transform it into a Ice Rune",
   "book.runology.runologyguide.purity.purityrune.name": "Purity Rune",
